# cmt-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  settings.json
.gsd.migrating/: CODEBASE.md  DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  last-snapshot.md  metrics.json  notifications.jsonl  state-manifest.json
.gsd.migrating/activity/: 001-complete-milestone-M001.jsonl  001-complete-slice-M001-S02.jsonl  001-complete-slice-M001-S03.jsonl  001-execute-task-M001-S03-T04.jsonl  001-execute-task-M001-S04-T04.jsonl  001-execute-task-M001-S09-T05.jsonl  001-research-slice-M001-S04.jsonl  001-research-slice-M001-S05.jsonl  001-research-slice-M001-S06.jsonl  001-research-slice-M001-S11.jsonl  002-complete-slice-M001-S03.jsonl  002-execute-task-M001-S02-T01.jsonl  002-execute-task-M001-S03-T03.jsonl  002-execute-task-M001-S04-T05.jsonl  002-execute-task-M001-S09-T06.jsonl  002-plan-slice-M001-S04.jsonl  002-plan-slice-M001-S05.jsonl  002-plan-slice-M001-S06.jsonl  002-plan-slice-M001-S11.jsonl  003-complete-slice-M001-S03.jsonl  003-execute-task-M001-S02-T02.jsonl  003-execute-task-M001-S04-T01.jsonl  003-execute-task-M001-S04-T06.jsonl  003-execute-task-M001-S05-T01.jsonl  003-execute-task-M001-S06-T01.jsonl  003-execute-task-M001-S09-T06.jsonl  003-execute-task-M001-S11-T01.jsonl  004-complete-slice-M001-S04.jsonl  004-complete-slice-M001-S09.jsonl  004-execute-task-M001-S02-T03.jsonl  004-execute-task-M001-S04-T02.jsonl  004-execute-task-M001-S05-T02.jsonl  004-execute-task-M001-S06-T02.jsonl  004-execute-task-M001-S11-T02.jsonl  004-reassess-roadmap-M001-S03.jsonl  005-execute-task-M001-S02-T04.jsonl  005-execute-task-M001-S04-T03.jsonl  005-execute-task-M001-S05-T03.jsonl  005-execute-task-M001-S06-T03.jsonl  005-execute-task-M001-S09-T03.jsonl  (+73 more)
.gsd.migrating/audit/: events.jsonl
.gsd.migrating/exec/: 00386ef9-a516-469a-ae54-616876f3def6.meta.json  00386ef9-a516-469a-ae54-616876f3def6.stdout  (+2121 more)
.gsd.migrating/graphs/: graph.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
src/: main.rs
ui/: about_tab.slint  archive_patcher_window.slint  downgrader_window.slint  f4se_tab.slint  main.slint  overview_tab.slint  scanner_tab.slint  settings_tab.slint  tools_tab.slint
(+416 files in other folders)
